# Locus-OS

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  index.html  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts
.cargo/: config.toml
.github/workflows/: storybook.yml
.storybook/: main.ts  preview.tsx
crates/locus-agent/: Cargo.toml
crates/locus-api/: Cargo.toml
crates/locus-api/src/: lib.rs  main.rs  marketplace.rs
crates/locus-nlp/: Cargo.toml
crates/locus-nlp/src/: lib.rs  local.rs  models.rs  ner.rs  nim.rs  pipeline.rs  pos.rs  split_compound.rs  time_phrase.rs
crates/locus-nlp/tests/: golden.rs  perf.rs  trait_roundtrip.rs
crates/locus-nlp/tests/fixtures/: open_slack_with_sarah.json  remind_me_friday.json  summarise_doc_for_anna.json
crates/locus-parser/: Cargo.toml
crates/locus-parser/src/: lib.rs  onnx.rs
crates/spaces-core/: Cargo.toml
crates/spaces-core/migrations/: 0001_init.cypher  0001_init.sql  0002_memories.sql  0003_collab.sql  0004_plugins.sql  0005_predictions.sql  0006_focus_goals.sql  0007_simulations.sql  0008_audit_logs.sql  README.md
crates/spaces-core/src/: graph.rs  lib.rs
docs/backlog/: README.md  nlp-phase-a.csv
docs/design-system/: zeroheight-integration.md
docs/plans/: nlp-phase-a.md  nlp-stack.md
scripts/: export-design-tokens.mjs  fetch-nlp-models.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  apps.rs  commands.rs  gql.rs  lib.rs  main.rs
src/components/: CollabBar.tsx  EntityChips.tsx  FlowRow.tsx  FocusGoalBar.tsx  GovernanceChip.tsx  GraphExplorer.tsx  IdleView.tsx  LocusBar.tsx  LotusCanvas.tsx  NoteModule.tsx  PluginFlightOverlay.stories.tsx  PluginFlightOverlay.tsx  SpaceRail.tsx  SpaceView.tsx  SpaceflowView.stories.tsx  SpaceflowView.tsx  TopChrome.tsx  TransitionTimeline.tsx  spaceflow-view.css
src/design/: EntityChip.stories.tsx  EntityChip.tsx  GlassModule.stories.tsx  GlassModule.tsx  GraphExplorerPanel.stories.tsx  GraphExplorerPanel.tsx  Keyframes.stories.tsx  LandingHero.stories.tsx  LandingHero.tsx  LongPressMenu.stories.tsx  LongPressMenu.tsx  LotusCanvas.stories.tsx  LotusCanvas.tsx  MarketplaceBoard.stories.tsx  MarketplaceBoard.tsx  PluginCard.stories.tsx  PluginCard.tsx  PredictionBoard.stories.tsx  PredictionBoard.tsx  SimulationBoard.stories.tsx  SimulationBoard.tsx  Tokens.stories.tsx  TransitionTimeline.stories.tsx  TransitionTimeline.tsx  canvas.css  entity-chip.css  glass-module.css  global.css  index.ts  keyframes.css  landing-hero.css  long-press-menu.css  marketplace-board.css  (+4 more)
tokens/: README.md  locus.tokens.json
(+33 files in other folders)
