[package]
name = "locus"
version = "0.1.0"
edition = "2021"

[lib]
name = "locus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
locus-parser = { path = "../crates/locus-parser" }
spaces-core = { path = "../crates/spaces-core" }
locus-agent = { path = "../crates/locus-agent" }
locus-nlp = { path = "../crates/locus-nlp" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
async-graphql = "7"
async-graphql-axum = "7"
dotenvy = "0.15"
