[package]
name = "locus-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "locus-server"
path = "src/main.rs"

[dependencies]
spaces-core  = { path = "../spaces-core" }
locus-nlp    = { path = "../locus-nlp" }
async-graphql     = "7"
async-graphql-axum = "7"
axum          = "0.8"
tokio         = { version = "1", features = ["full"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
dotenvy       = "0.15"
