[package]
name = "locus-nlp"
version = "0.1.0"
edition = "2021"
description = "Locus-OS NLP pipeline (POS, NER, keywords, coref, embeddings, prompts)."

[dependencies]
async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
tokio       = { version = "1", features = ["sync", "fs"] }
tracing     = "0.1"

# Pure-Rust ONNX inference (works on all platforms, no system deps)
tract-onnx = "0.21"

# Tokenization
tokenizers = "0.21"

# Model download / cache
directories = "6"
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2        = "0.10"
hex         = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
